@@ -182,13 +182,16 @@ if ( ! class_exists( 'WC_Connect_Label_Reports' ) ) {
 									<?php echo esc_html( get_date_from_gmt( date( 'Y-m-d H:i:s', $label['created'] / 1000 ) ) ); ?>
 								</th>
 								<td>
-									<?php echo wp_kses( $this->get_edit_order_link( $label['order_id'] ),
+									<?php
+									echo wp_kses(
+										$this->get_edit_order_link( $label['order_id'] ),
 										array(
 											'a' => array(
-												'href'   => array()
+												'href' => array(),
 											),
 										)
-									); ?>
+									);
+									?>
 								</td>
 								<td>
 									<?php echo wp_kses_post( wc_price( $label['rate'] ) ); ?>
